--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Joshua Norris</span>
+          <span class="text-color-main">Joshua Norris</span>
           <br />
             Software Developer
         </h1>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/Headshot.png"
                 alt="Profile Image"
               />
             </div>
@@ -88,7 +88,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/Joshua Norris Resume.pdf"
                 >
                   View Resume
                 </a>
@@ -110,19 +110,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Smart Brain</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    Full-Stack App with React frontend, NodeJS backend that pulls from the clarifai REST api, and postgresql database. Currently the project has 2 main features... creation and storing of accounts in the database, and face detection given an image.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://joshuanorris.github.io/smart-brain/"
                 >
                   See Live
                 </a>
@@ -130,7 +128,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/JoshuaNorris/smart-brain"
                 >
                   Source Code
                 </a>
@@ -149,7 +147,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/Smart Brain.png"
                     />
                   </div>
                 </a>
@@ -162,19 +160,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Pathfinder</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    Uses Breadth-First Search and Depth-First Search algorithms to find the path in a maze. The maze is randomly generated and is guaranteed to have a path. This is completely front-end and uses Javascript.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://joshuanorris.github.io/pathfinder/"
                 >
                   See Live
                 </a>
@@ -182,7 +178,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/JoshuaNorris/pathfinder"
                 >
                   Source Code
                 </a>
@@ -201,7 +197,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/Pathfinder.png"
                     />
                   </div>
                 </a>
